--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <variable
+            name="characterList"
+            type="java.util.List&lt;com.example.rickandmorty.models.Character>" />
+    </data>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -8,8 +15,24 @@
         tools:context=".ui.characters.CharactersFragment">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvCharacters"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            data="@{characterList}"/>
+
+        <RelativeLayout
+            android:id="@+id/rlProgress"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#42000000"
+            android:visibility="gone"
+            android:elevation="6dp">
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"/>
+        </RelativeLayout>
 
     </FrameLayout>
 </layout>
