--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,9 +13,8 @@
         <action
             android:id="@+id/action_charactersFragment_to_characterDetailFragment"
             app:destination="@id/characterDetailFragment"
-            app:enterAnim="@android:anim/bounce_interpolator"
-            app:popUpTo="@id/charactersFragment"
-            app:popUpToInclusive="false" />
+            app:enterAnim="@anim/nav_default_enter_anim"
+            />
     </fragment>
     <fragment
         android:id="@+id/characterDetailFragment"
