--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,7 +9,7 @@
     tools:context=".ui.SplashActivity">
 
     <ImageView
-        android:id="@+id/ivImage"
+        android:id="@+id/ivSplash"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@drawable/rick_and_morty_splash"
